--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                 <img class="back" src="Images/cardback.jpg"></img>
             </div>
         </div> -->
+        <audio class="winner" src="Sounds/winner.mp3"></audio>
+        <audio class="click" src="Sounds/click.mp3"></audio>
+        <audio class="wrong" src="Sounds/wrong.mp3"></audio>
+        <audio class="correct" src="Sounds/correct.mp3"></audio>
     </div>
     <script src="index.js"></script>
 </body>
