--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <div class="container">
         <div class="toprow">
-            <div class="start">
-                <button>Start</button>
-            </div>        
+            <!-- <div class="start"> -->
+                <button>START</button>
+            <!-- </div>         -->
             <div class="time">00:00</div>
         </div>
         <div class="row">
