added reset button and gameover audio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="container">
         <div class="toprow">
             <!-- <div class="start"> -->
-                <button>START</button>
+                <button class="start">START</button>
+                <button class="reset">RESET</button>
             <!-- </div>         -->
             <div class="time">00:00</div>
         </div>
@@ -111,6 +112,7 @@
         <audio class="click" src="Sounds/click.mp3"></audio>
         <audio class="wrong" src="Sounds/wrong.mp3"></audio>
         <audio class="correct" src="Sounds/correct.mp3"></audio>
+        <audio class="gameover" src="Sounds/gameover.ogg"></audio>
     </div>
     <script src="index.js"></script>
 </body>
